--- a/notebooks/eCardiacRehab.ipynb
+++ b/notebooks/eCardiacRehab.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,12 +361,56 @@
    "source": [
     "### **Prompt 3 to a local LLM installed on a MacBook Pro**:\n",
     "\n",
-    "`% ollama run gemma3:27b \"Forklar betydningen rehabilitering av pasienter som har gjennomgått perkutan koronarintervensjon (svar på nynorsk)\"`  "
+    "`% ollama run gemma3:27b \"Forklar betydningen av rehabilitering til en pasient (taxisjåfør) som nylig har gjennomgått perkutan koronarintervensjon (svar på nynorsk)\"`  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Disclaimer:** I am an AI chatbot and cannot provide medical advice. This \n",
+    "information is for general knowledge and informational purposes only, and \n",
+    "does not constitute medical advice. It is essential to consult with a \n",
+    "qualified healthcare professional for any health concerns or before making \n",
+    "any decisions related to your health or treatment.\n",
+    "(base) arvid@kxq1h2c9jr eHjerteRehab % ollama run gemma3:27b \"Forklar betydningen av rehabilitering til en pasient (taxisjåfør) som nylig har gjennomgått perkutan koronarintervensjon (svar på nynorsk)\"\n",
+    "God dag. Eg forstår du har fått utført ein PCI, eller det me ofte kallar ein ballongutviding av hjartet. No er det viktig at du får ein god rehabilitering etterpå. La meg forklare kva det eigentleg inneber.\n",
+    "\n",
+    "**Rehabilitering handlar om meir enn berre å bli frisk.** Det er eit program som er tilpassa deg og ditt behov, og som hjelper deg med å kome tilbake til eit aktivt liv etter at du har vore sjuk. Tenk på det som å \n",
+    "tune bilen din etter at den har fått ein reparasjon – det handlar om å få alt til å fungere optimalt igjen.\n",
+    "\n",
+    "**Kva inneber rehabiliteringa?**\n",
+    "\n",
+    "*   **Fysisk trening:** Du vil få eit individuelt tilpassa treningsprogram, under tilsyn av fagfolk. Dette vil hjelpe deg med å styrke hjartet og kroppen, betre kondisjonen og auke energien. Det kan vere lett gange, \n",
+    "sykling eller andre aktivitetar. Me startar forsiktig og aukar gradvis intensiteten.\n",
+    "*   **Hjartevennleg kosthald:** Du vil få råd om korleis du kan ete sunnare, for å hjelpe hjartet ditt og redusere risikoen for nye problem.\n",
+    "*   **Livsstilsendringar:** Rehabprogrammet hjelper deg med å identifisere og endre vaner som kan vere skadelege for hjartet ditt, som røyking, stress og lite aktivitet.\n",
+    "*   **Psykisk helse:** Det kan vere vanskeleg å verte sjuk og rehabiliteringa kan inkludere støttesamtaler for å hjelpe deg med å takle stress, angst eller depresjon.\n",
+    "*   **Medisinering:** Me går gjennom medisinen din og sørger for at du forstår korleis den skal brukast.\n",
+    "*   **Oppfølging:** Du vil få regelmessige kontroller for å følge med på korleis du utviklar deg og justere programmet etter behov.\n",
+    "\n",
+    "**Kvifor er rehabilitering viktig for deg, som taxisjåfør?**\n",
+    "\n",
+    "Du er vant til å sitje mykje, og jobben din kan vere stressande. Rehabiliteringa vil hjelpe deg med å:\n",
+    "\n",
+    "*   **Forbedre kondisjonen:** Så du orkar meir i løpet av ein arbeidsdag og ikkje blir so lett sliten.\n",
+    "*   **Redusere risikoen for nye hjarteproblem:** Programmet hjelper deg med å halde hjartet ditt sunt i mange år framover.\n",
+    "*   **Få kontroll over hjartehelsa di:** Du får kunnskap og verktøy til å ta vare på hjartet ditt sjølv.\n",
+    "*   **Få tilbake livskvaliteten:** Du kan gjenoppta aktivitetar du likar, og leve eit fullare liv.\n",
+    "\n",
+    "**Kor lenge vare rehabiliteringa?**\n",
+    "\n",
+    "Det varierer, men typisk sett er eit rehabiliteringsprogram mellom 6 og 12 veker.\n",
+    "\n",
+    "**Eg vil gjerne understreke:**  Dette er ikkje noko du *må* gjere, men det er ein fantastisk moglegheit til å forbetre helsa di og få eit betre liv.  \n",
+    "\n",
+    "Har du nokre spørsmål om dette?  Me kan snakke meir om kva eit rehabiliteringsprogram kan innebera for deg spesifikt.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +951,7 @@
     "# Define the Clinical Reporter Agent\n",
     "clinical_reporter = Agent(\n",
     "    role='Clinical Summary Generator',\n",
-    "    goal='Compile the findings from vital signs analysis and symptom checking into a concise Markdown report. The report should list each patient, any flagged vital signs with values, and any flagged symptoms. If no flags for a patient, state \"No immediate concerns noted\".',\n",
+    "    goal='Compile the findings from vital signs analysis and symptom checking into a concise Markdown report. The report should list each patient, any flagged vital signs with values, and any flagged symptoms. If no flags for a patient, state \"No immediate concerns noted\" with a short justification.',\n",
     "    backstory='An AI assistant skilled in synthesizing analytical information from multiple sources and presenting it clearly and efficiently in Markdown format for healthcare professionals.',\n",
     "    llm=openai_llm,\n",
     "    verbose=True, #True,\n",
@@ -1315,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1413,40 +1457,37 @@
       "{'patient_id': 'P007', 'avg_resting_hr_last_24h': 82, 'max_hr_during_exercise_last_24h': 148, 'total_steps_last_24h': 6800, 'reported_symptoms_text': 'Great day! Completed all my exercises. Feeling stronger and more confident.'}\n",
       "{'patient_id': 'P008', 'avg_resting_hr_last_24h': 93, 'max_hr_during_exercise_last_24h': 170, 'total_steps_last_24h': 2400, 'reported_symptoms_text': 'Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.'}\n",
       "------\n",
-      "Identify patients with resting heart rate (avg_resting_hr_last_24h) > 90 bpm OR total steps (total_steps_last_24h) < 2000. For each patient, list their ID and the specific vital sign(s) that are flagged with their values.If no vital signs are flagged for a patient, note that.\u001b[00m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Identify patients with resting heart rate (avg_resting_hr_last_24h) > 90 bpm OR total steps (total_steps_last_24h) < 2000. For each patient, list their ID and the specific vital sign(s) that are flagged with their values.If no vital signs are flagged for a patient, note that.\u001b[00m\n",
       "\n",
       "\n",
       "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mVital Signs Monitoring Specialist\u001b[00m\n",
       "\u001b[95m## Final Answer:\u001b[00m \u001b[92m\n",
       "- Patient ID: P002  \n",
       "  Flagged Vital Signs:  \n",
-      "  - Avg Resting HR: 95 bpm  \n",
-      "  - Total Steps: 1800 steps  \n",
+      "  - Avg Resting HR: 95 bpm (high)  \n",
+      "  - Total Steps: 1800 (low)  \n",
       "\n",
       "- Patient ID: P004  \n",
       "  Flagged Vital Signs:  \n",
-      "  - Avg Resting HR: 88 bpm  \n",
-      "  - Total Steps: 1500 steps  \n",
+      "  - Avg Resting HR: 88 bpm (not flagged)  \n",
+      "  - Total Steps: 1500 (low)  \n",
       "\n",
       "- Patient ID: P005  \n",
       "  Flagged Vital Signs:  \n",
-      "  - Avg Resting HR: 102 bpm  \n",
+      "  - Avg Resting HR: 102 bpm (high)  \n",
+      "  - Total Steps: 3200 (not flagged)  \n",
       "\n",
       "- Patient ID: P006  \n",
       "  Flagged Vital Signs:  \n",
-      "  - Total Steps: 950 steps  \n",
+      "  - Avg Resting HR: 75 bpm (not flagged)  \n",
+      "  - Total Steps: 950 (low)  \n",
       "\n",
       "- Patient ID: P008  \n",
       "  Flagged Vital Signs:  \n",
-      "  - Avg Resting HR: 93 bpm  \n",
+      "  - Avg Resting HR: 93 bpm (high)  \n",
+      "  - Total Steps: 2400 (not flagged)  \n",
       "\n",
-      "Patients P001, P003, and P007 have no flagged vital signs.\u001b[00m\n",
+      "- Patient ID: P001, P003, and P007 have no flagged vital signs.\u001b[00m\n",
       "\n",
       "\n",
       "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mPatient Symptom Screener\u001b[00m\n",
@@ -1467,18 +1508,28 @@
       "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mPatient Symptom Screener\u001b[00m\n",
       "\u001b[95m## Final Answer:\u001b[00m \u001b[92m\n",
       "- Patient ID: P002  \n",
-      "  Flagged Symptom: \"Woke up with some chest pain, but it passed. Feeling a bit dizzy today after climbing stairs.\"  \n",
+      "  Flagged Symptoms: Woke up with some chest pain, but it passed. Feeling a bit dizzy today after climbing stairs.  \n",
       "\n",
       "- Patient ID: P004  \n",
-      "  Flagged Symptom: \"Had some palpitations during exercise yesterday. Also experienced dizziness when standing up quickly.\"  \n",
+      "  Flagged Symptoms: Had some palpitations during exercise yesterday. Also experienced dizziness when standing up quickly.  \n",
+      "\n",
+      "- Patient ID: P005  \n",
+      "  Flagged Symptoms: No critical symptoms reported.  \n",
       "\n",
       "- Patient ID: P006  \n",
-      "  Flagged Symptom: \"Feeling tired, slight chest discomfort during stairs. Had to rest more than usual.\"  \n",
+      "  Flagged Symptoms: Slight chest discomfort during stairs.  \n",
       "\n",
       "- Patient ID: P008  \n",
-      "  Flagged Symptom: \"Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.\"  \n",
+      "  Flagged Symptoms: Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.  \n",
       "\n",
-      "Patients P001, P003, and P007 have no flagged vital signs.\u001b[00m\n",
+      "- Patient ID: P001  \n",
+      "  Flagged Symptoms: No critical symptoms reported.  \n",
+      "\n",
+      "- Patient ID: P003  \n",
+      "  Flagged Symptoms: No critical symptoms reported.  \n",
+      "\n",
+      "- Patient ID: P007  \n",
+      "  Flagged Symptoms: No critical symptoms reported.\u001b[00m\n",
       "\n",
       "\n",
       "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mClinical Summary Generator\u001b[00m\n",
@@ -1489,24 +1540,24 @@
       "\u001b[95m## Final Answer:\u001b[00m \u001b[92m\n",
       "```markdown\n",
       "### Patient ID: P002\n",
-      "- Flagged Vital Signs: Avg Resting HR: 95 bpm, Total Steps: 1800 steps\n",
-      "- Flagged Symptoms: \"Woke up with some chest pain, but it passed. Feeling a bit dizzy today after climbing stairs.\"\n",
+      "- Flagged Vital Signs: Avg Resting HR: 95 bpm (high), Total Steps: 1800 (low)\n",
+      "- Flagged Symptoms: Woke up with some chest pain, but it passed. Feeling a bit dizzy today after climbing stairs.\n",
       "\n",
       "### Patient ID: P004\n",
-      "- Flagged Vital Signs: Avg Resting HR: 88 bpm, Total Steps: 1500 steps\n",
-      "- Flagged Symptoms: \"Had some palpitations during exercise yesterday. Also experienced dizziness when standing up quickly.\"\n",
+      "- Flagged Vital Signs: Total Steps: 1500 (low)\n",
+      "- Flagged Symptoms: Had some palpitations during exercise yesterday. Also experienced dizziness when standing up quickly.\n",
       "\n",
       "### Patient ID: P005\n",
-      "- Flagged Vital Signs: Avg Resting HR: 102 bpm\n",
-      "- No immediate concerns noted for this patient.\n",
+      "- Flagged Vital Signs: Avg Resting HR: 102 bpm (high)\n",
+      "- Flagged Symptoms: No critical symptoms reported.\n",
       "\n",
       "### Patient ID: P006\n",
-      "- Flagged Vital Signs: Total Steps: 950 steps\n",
-      "- Flagged Symptoms: \"Feeling tired, slight chest discomfort during stairs. Had to rest more than usual.\"\n",
+      "- Flagged Vital Signs: Total Steps: 950 (low)\n",
+      "- Flagged Symptoms: Slight chest discomfort during stairs.\n",
       "\n",
       "### Patient ID: P008\n",
-      "- Flagged Vital Signs: Avg Resting HR: 93 bpm\n",
-      "- Flagged Symptoms: \"Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.\"\n",
+      "- Flagged Vital Signs: Avg Resting HR: 93 bpm (high)\n",
+      "- Flagged Symptoms: Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.\n",
       "\n",
       "### Patient ID: P001\n",
       "- No immediate concerns noted for this patient.\n",
@@ -1524,24 +1575,24 @@
       "--- Final Report ---\n",
       "```markdown\n",
       "### Patient ID: P002\n",
-      "- Flagged Vital Signs: Avg Resting HR: 95 bpm, Total Steps: 1800 steps\n",
-      "- Flagged Symptoms: \"Woke up with some chest pain, but it passed. Feeling a bit dizzy today after climbing stairs.\"\n",
+      "- Flagged Vital Signs: Avg Resting HR: 95 bpm (high), Total Steps: 1800 (low)\n",
+      "- Flagged Symptoms: Woke up with some chest pain, but it passed. Feeling a bit dizzy today after climbing stairs.\n",
       "\n",
       "### Patient ID: P004\n",
-      "- Flagged Vital Signs: Avg Resting HR: 88 bpm, Total Steps: 1500 steps\n",
-      "- Flagged Symptoms: \"Had some palpitations during exercise yesterday. Also experienced dizziness when standing up quickly.\"\n",
+      "- Flagged Vital Signs: Total Steps: 1500 (low)\n",
+      "- Flagged Symptoms: Had some palpitations during exercise yesterday. Also experienced dizziness when standing up quickly.\n",
       "\n",
       "### Patient ID: P005\n",
-      "- Flagged Vital Signs: Avg Resting HR: 102 bpm\n",
-      "- No immediate concerns noted for this patient.\n",
+      "- Flagged Vital Signs: Avg Resting HR: 102 bpm (high)\n",
+      "- Flagged Symptoms: No critical symptoms reported.\n",
       "\n",
       "### Patient ID: P006\n",
-      "- Flagged Vital Signs: Total Steps: 950 steps\n",
-      "- Flagged Symptoms: \"Feeling tired, slight chest discomfort during stairs. Had to rest more than usual.\"\n",
+      "- Flagged Vital Signs: Total Steps: 950 (low)\n",
+      "- Flagged Symptoms: Slight chest discomfort during stairs.\n",
       "\n",
       "### Patient ID: P008\n",
-      "- Flagged Vital Signs: Avg Resting HR: 93 bpm\n",
-      "- Flagged Symptoms: \"Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.\"\n",
+      "- Flagged Vital Signs: Avg Resting HR: 93 bpm (high)\n",
+      "- Flagged Symptoms: Some severe discomfort in my chest area this morning. Also felt faint briefly around noon.\n",
       "\n",
       "### Patient ID: P001\n",
       "- No immediate concerns noted for this patient.\n",
