--- a/notebooks/eCardiacRehab.ipynb
+++ b/notebooks/eCardiacRehab.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,18 +662,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CrewAI Demo: Personalized Activity Recommendations for eCardiacRehab\n",
+    "### Side note:  CrewAI Demo on Personalized Activity Recommendations for eCardiacRehab (In Norwegian)\n",
+    "\n",
+    "Check: ./eHjerteRehab.ipynb ()\n",
     "\n",
     "#### **Purpose:** \n",
-    "This Jupyter Notebook example demonstrates how a team of specialized AI agents, built with CrewAI, can collaborate to analyze a (simulated) patient profile and generate personalized activity recommendations with a subsequent ethical assessment. This illustrates a potential application of AI to support personalization in eCardiacRehab.\n",
+    "This Jupyter Notebook example demonstrates how a team of specialized AI agents, built with CrewAI, can collaborate to analyze a (simulated) patient profile and generate **personalized activity recommendations with a subsequent ethical assessment**. \n",
+    "\n",
+    "This illustrates a potential application of AI to support personalization in eCardiacRehab.\n",
     "\n",
     "#### **Scenario:**\n",
     "\n",
-    "1. A `DataInterpreterAgent` analyzes a patient profile to identify key insights.\n",
+    "1. A `DataInterpreterAgent` (`DataFortolkerAgent`) analyzes a patient profile to identify key insights.\n",
     "\n",
-    "2. An `ActivityDesignerAgent` uses these insights to suggest rehabilitation activities.\n",
+    "2. An `ActivityDesignerAgent` (`AktivitetsDesignerAgent`) uses these insights to suggest rehabilitation activities.\n",
     "\n",
-    "3. An `EthicsAndComplianceAgent` evaluates the recommendations from an ethical and responsible perspective.\n",
+    "3. An `EthicsAndComplianceAgent` (`EtikkOgSamsvarsAgent`) evaluates the recommendations from an ethical and responsible perspective.\n",
     "\n",
     "#### **Note**: \n",
     "This is a conceptual demonstration and does not use real patient data or advanced medical tools."
